react-tools experiment with slider

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
   <title>Photo Groove2</title>
 
   <link rel="stylesheet" href="http://elm-in-action.com/styles.css">
+  <link rel="import" href="http://elm-in-action.com/wc/slider/paper-slider.html"> 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
 </head>
 
 <body class="app-container">
